[package]
name = "bevy_zorvix_level_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20.3"
bevy_prototype_debug_lines = "0.10.2"
catppuccin = "1.2.1"
catppuccin-egui = "2.0.1"
