[package]
name = "bevy_zorvix_level_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_easings = "0.10.0"
bevy_egui = "0.20.3"
bevy_prototype_debug_lines = "0.10.2"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_mod_picking = {version="0.13.0", default_features = false, features = ["backend_egui", "backend_raycast", "selection", "highlight"]}